# DataScienceProject2

./: main.py  push_data.py  pyproject.toml  requirements.txt
final_model/: preprocessor.pkl
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constants/training_pipeline/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: exception.py
src/logging/: logger.py
src/utils/main_utils/: utils.py
src/utils/ml_utils/metric/: classification_metric.py
src/utils/ml_utils/model/: estimator.py
