[project]
name = "datascienceproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.7.14",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "pymongo==4.13.2",
    "python-dotenv==1.1.1",
    "scikit-learn==1.7.0",
]
